; ModuleID = '/home/carl/AnghaBench/rufus/src/extr_dos.c_DaysSinceEpoch.c'
source_filename = "/home/carl/AnghaBench/rufus/src/extr_dos.c_DaysSinceEpoch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DAYSPERNORMALYEAR = common dso_local global i32 0, align 4
@EPOCHYEAR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @DaysSinceEpoch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DaysSinceEpoch(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = add nsw i32 %4, -1
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @DAYSPERNORMALYEAR, align 4
  %8 = mul nsw i32 %6, %7
  %9 = load i32, i32* %2, align 4
  %10 = sdiv i32 %9, 4
  %11 = add nsw i32 %8, %10
  %12 = load i32, i32* %2, align 4
  %13 = sdiv i32 %12, 100
  %14 = sub nsw i32 %11, %13
  %15 = load i32, i32* %2, align 4
  %16 = sdiv i32 %15, 400
  %17 = add nsw i32 %14, %16
  store i32 %17, i32* %3, align 4
  %18 = load i32, i32* @EPOCHYEAR, align 4
  %19 = sub nsw i32 %18, 1
  %20 = load i32, i32* @DAYSPERNORMALYEAR, align 4
  %21 = mul nsw i32 %19, %20
  %22 = load i32, i32* @EPOCHYEAR, align 4
  %23 = sub nsw i32 %22, 1
  %24 = sdiv i32 %23, 4
  %25 = add nsw i32 %21, %24
  %26 = load i32, i32* @EPOCHYEAR, align 4
  %27 = sub nsw i32 %26, 1
  %28 = sdiv i32 %27, 100
  %29 = sub nsw i32 %25, %28
  %30 = load i32, i32* @EPOCHYEAR, align 4
  %31 = sub nsw i32 %30, 1
  %32 = sdiv i32 %31, 400
  %33 = add nsw i32 %29, %32
  %34 = load i32, i32* %3, align 4
  %35 = sub nsw i32 %34, %33
  store i32 %35, i32* %3, align 4
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
